--- a/arch/m68k/Makefile.inc
+++ b/arch/m68k/Makefile.inc
@@ -1,5 +1,5 @@
 #	$Id$
 
 KMINCLUDES=	arch/m68k/DEFS.h arch/m68k/SYS.h
-KMSRCS=	bcmp.S bzero.S ffs.S strcat.c strcmp.S strcpy.S strlen.S strncmp.S \
+KMSRCS=	bcmp.S bzero.S ffs.S strcat.S strcmp.S strcpy.S strlen.S strncmp.S \
 	strncpy.S htonl.S htons.S ntohl.S ntohs.S
