--- a/yp/Makefile.inc
+++ b/yp/Makefile.inc
@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile.inc,v 1.9 1995/09/12 19:40:27 thorpej Exp $
+#	$OpenBSD: Makefile.inc,v 1.9 1995/09/12 19:40:27 thorpej Exp $
 
 # yp sources
 .PATH: ${.CURDIR}/arch/${MACHINE_ARCH}/yp ${.CURDIR}/yp
