Add thread-safety to libc, so that libc_r will build (on i386 at least). All POSIX libc api now there (to P1003.1c/D10)   (more md stuff is needed for other libc/arch/*)   (setlogin is no longer a special syscall) Add -pthread option to gcc (that makes it use -lc_r and -D_POSIX_THREADS). Doc some re-entrant routines Add libc_r to intro(3) dig() uses some libc srcs and an extra -I was needed there. Add more md stuff to libc_r. Update includes for the pthreads api Update libc_r TODO

--- a/compat-43/Makefile.inc
+++ b/compat-43/Makefile.inc
@@ -1,7 +1,7 @@
-#	$OpenBSD: Makefile.inc,v 1.1.1.1 1995/10/18 08:41:45 deraadt Exp $
+#	$OpenBSD: Makefile.inc,v 1.2 1996/08/19 08:19:13 tholo Exp $
 
 # compat-43 sources
-.PATH: ${.CURDIR}/arch/${MACHINE_ARCH}/compat-43 ${.CURDIR}/compat-43
+.PATH: ${LIBCSRCDIR}/arch/${MACHINE_ARCH}/compat-43 ${LIBCSRCDIR}/compat-43
 
 SRCS+=	__setreuid.c __setregid.c creat.c getdtablesize.c gethostid.c \
 	getwd.c killpg.c sethostid.c setpgrp.c setregid.c setreuid.c \
