--- a/db/hash/Makefile.inc
+++ b/db/hash/Makefile.inc
@@ -1,6 +1,6 @@
-#	$OpenBSD: Makefile.inc,v 1.6 1996/05/03 21:43:43 cgd Exp $
+#	$OpenBSD: Makefile.inc,v 1.3 1996/08/19 08:20:27 tholo Exp $
 
-.PATH: ${.CURDIR}/db/hash
+.PATH: ${LIBCSRCDIR}/db/hash
 
 SRCS+=	hash.c hash_bigkey.c hash_buf.c hash_func.c hash_log2.c \
 	hash_page.c hsearch.c ndbm.c
