--- a/time/Makefile.inc
+++ b/time/Makefile.inc
@@ -1,6 +1,6 @@
-#	$OpenBSD: Makefile.inc,v 1.3 1998/01/19 00:07:37 millert Exp $
+#	$OpenBSD: Makefile.inc,v 1.4 1998/02/04 22:22:42 deraadt Exp $
 
-.PATH: ${.CURDIR}/time
+.PATH: ${LIBCSRCDIR}/time
 
 SRCS+=	asctime.c difftime.c localtime.c strftime.c strptime.c
 MAN+=	ctime.3 strftime.3 time2posix.3 tzfile.5 tzset.3 strptime.3
