--- a/arch/hppa/gen/Makefile.inc
+++ b/arch/hppa/gen/Makefile.inc
@@ -1,3 +1,3 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile.inc,v 1.1 1998/12/17 16:56:46 mickey Exp $
 
-SRCS+=	milli.S
+SRCS+=	isnan.c isinf.c infinity.c sigsetjmp.S
