--- a/arch/hppa/Makefile.inc
+++ b/arch/hppa/Makefile.inc
@@ -1,4 +1,12 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile.inc,v 1.1 1998/12/17 16:56:45 mickey Exp $
 
 KMINCLUDES=	arch/hppa/DEFS.h arch/hppa/SYS.h prefix.h
-KMSRCS=	bcmp.S bzero.S bcopy.S ffs.S milli.S
+KMSRCS=	bcmp.S bzero.S bcopy.m4 ffs.S
+
+SRCS+=	memmove.S
+CLEANFILES+=	memmove.S
+
+memmove.S:	${LIBCSRCDIR}/arch/hppa/string/bcopy.m4
+	@echo 'building ${.TARGET} from ${.ALLSRC}'
+	@m4 -DNAME=bcopy ${.ALLSRC} > ${.TARGET}
+
