--- a/arch/mvme88k/Makefile.inc
+++ b/arch/mvme88k/Makefile.inc
@@ -1,4 +1,4 @@
-#	$Id$
+#	$OpenBSD: Makefile.inc,v 1.1 1997/03/25 17:06:49 rahnds Exp $
 
 KMINCLUDES=	arch/m88k/DEFS.h arch/m88k/SYS.h
 #KMSRCS=	bcmp.S bzero.S ffs.S strcat.c strcmp.S strcpy.S strlen.S strncmp.S \
