--- a/arch/hppa/string/Makefile.inc
+++ b/arch/hppa/string/Makefile.inc
@@ -1,8 +1,7 @@
-#	$OpenBSD: Makefile.inc,v 1.5 2002/02/25 17:30:28 mickey Exp $
+#	$OpenBSD: Makefile.inc,v 1.6 2002/07/08 21:31:22 mickey Exp $
 
-SRCS+=	bcmp.c bzero.c memchr.c memcmp.c memset.c index.c rindex.c \
-	strcat.c strcmp.c strcpy.c strcspn.c strlen.c \
+SRCS+=	bcmp.c bzero.c bcopy.c memchr.c memcmp.c memset.c index.c rindex.c \
+	strcat.c strcmp.c strcpy.c strlcpy.c strcspn.c strlen.c \
 	strncat.c strncmp.c strncpy.c strpbrk.c strsep.c \
-	strspn.c strstr.c swab.c
-SRCS+=	ffs.c strlcpy.c
+	strspn.c strstr.c swab.c ffs.c
 
